--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,20 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- ProtocolLib API (5.3.0) -->
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
-            <version>5.3.0</version>
+            <version>5.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mojang</groupId>
+            <artifactId>authlib</artifactId>
+            <version>6.0.57</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
