Ticks-based instead of real-time - added bee despawn option in config

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,4 @@ main: hasjamon.block4block.BeeRegenPlugin
 api-version: 1.21
 authors: [HasJamOn, Bahm]
 version: 1.0
-description: Regenerates bees in hives that are missing them.
+description: Regenerates bees in hives that are missing them and despawns bees after a set number of ticks.
