--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,14 +1,22 @@
-# Interval in seconds between each check for bee spawning at beehives.
-checkIntervalSeconds: 600
+#Game running on 20 ticks estimated time guide:
+#1 second = 20 ticks
+#1 minute = 1200 ticks
+#1 hour = 72000 ticks
 
-# Cooldown in seconds between bee spawns at the same beehive.
-cooldown: 600
+# Interval in ticks between each check for bee spawning at beehives.
+checkIntervalTicks: 12000
+
+# Cooldown in ticks between bee spawns at the same beehive.
+cooldownTicks: 12000
 
 # Maximum number of bees that can spawn per interval.
 maxBeesPerInterval: 3
 
-# Time in seconds before the bee spawn count resets.
-interval: 3600
+# Time in ticks before the bee spawn count resets.
+spawnIntervalTicks: 72000
 
 # Maximum number of bees allowed in a beehive before spawning is allowed.
 maxBeesInHive: 0
+
+# Lifespan of a bee in ticks (0 means they never despawn).
+despawnTicks: 6000
